--- a/index.html
+++ b/index.html
@@ -44,25 +44,21 @@
               <th>#</th>
               <th>Nome</th>
               <th>Email</th>
+              <th>Telefone</th>
           </tr>
       </thead>
 
       <tbody>
           <tr>
-            <td colspan="3">Não existem dados registrados!</td>
-          </tr>
-
-          <!-- <tr>
-              <td>1</td>
-              <td>John Doe</td>
-              <td>john@doe.com</td>
+            <td colspan="4">Não existem dados registrados!</td>
           </tr>
 
           <tr>
-              <td>2</td>
-              <td>Mary Doe</td>
-              <td>mary@doe.com</td>
-          </tr> -->
+              <td>1</td>
+              <td>John Doe</td>
+              <td>john@doe.com</td>
+              <td>1345554454</td>
+          </tr>
       </tbody>
   </table>
 
