Criando a função que deleta o linha quando aperta em excluir

--- a/index.html
+++ b/index.html
@@ -45,19 +45,13 @@
               <th>Nome</th>
               <th>Email</th>
               <th>Telefone</th>
+              <th>Ações</th>
           </tr>
       </thead>
 
       <tbody>
           <tr>
-            <td colspan="4">Não existem dados registrados!</td>
-          </tr>
-
-          <tr>
-              <td>1</td>
-              <td>John Doe</td>
-              <td>john@doe.com</td>
-              <td>1345554454</td>
+            <td colspan="5">Não existem dados registrados!</td>
           </tr>
       </tbody>
   </table>
