Criando a função que gera a mensagem quando a tabela esta vazia

--- a/index.html
+++ b/index.html
@@ -49,11 +49,7 @@
           </tr>
       </thead>
 
-      <tbody>
-          <tr>
-            <td colspan="5">Não existem dados registrados!</td>
-          </tr>
-      </tbody>
+      <tbody></tbody>
   </table>
 
   <script src="agenda.js"></script>
